<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_local_files"
            android:icon="@drawable/ic_folder"
            android:title="@string/local_files" />
        <item
            android:id="@+id/nav_iptv"
            android:icon="@drawable/ic_tv"
            android:title="@string/network_stream" />
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_play"
            android:title="@string/player" />
    </group>

    <group android:id="@+id/account_menu_group"
        android:visible="false"
        >
        <item
            android:title="@string/account">
            <menu android:id="@+id/account_menu">
                <item
                    android:id="@+id/nav_user_info"
                    android:icon="@drawable/ic_person"
                    android:title="@string/user_information" />
                <item
                    android:id="@+id/action_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_logout" />
            </menu>
        </item>
    </group>


    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>